; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-omap2/extr_omap_phy_internal.c_am35x_musb_clear_irq.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-omap2/extr_omap_phy_internal.c_am35x_musb_clear_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AM35XX_CONTROL_LVL_INTR_CLEAR = common dso_local global i32 0, align 4
@AM35XX_USBOTGSS_INT_CLR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @am35x_musb_clear_irq() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @AM35XX_CONTROL_LVL_INTR_CLEAR, align 4
  %3 = call i32 @omap_ctrl_readl(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @AM35XX_USBOTGSS_INT_CLR, align 4
  %5 = load i32, i32* %1, align 4
  %6 = or i32 %5, %4
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* @AM35XX_CONTROL_LVL_INTR_CLEAR, align 4
  %9 = call i32 @omap_ctrl_writel(i32 %7, i32 %8)
  %10 = load i32, i32* @AM35XX_CONTROL_LVL_INTR_CLEAR, align 4
  %11 = call i32 @omap_ctrl_readl(i32 %10)
  store i32 %11, i32* %1, align 4
  ret void
}

declare dso_local i32 @omap_ctrl_readl(i32) #1

declare dso_local i32 @omap_ctrl_writel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
